--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
 <div class="projects">
 
   <div class="card">
-    <h2>GUL Project</h2>
+    <h2>Ghoul Project</h2>
     <p>
       Веб-приложение, разработанное на HTML, CSS и JavaScript.
     </p>
@@ -113,3 +113,4 @@
 
 </body>
 </html>
+
